# browsermux

./: Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml
.github/workflows/: publish.yml
src/: cli.rs  config.rs  main.rs  settings.rs  util.rs
src/commands/: completions.rs  launch.rs  mod.rs
wix/: main.wxs
