[package]
name = "browsermux"
description = "Route URLs to a specific browser!"
license = "MIT"
version = "0.1.0"
edition = "2024"


[dependencies]
# Error management
anyhow = "1"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"

# Config
config = "0.15"
regex = "1"
serde = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# URL parsing
url = "2.5"
