[package]
name = "browsermux"
description = "Route URLs to a specific browser!"
license = "MIT"
version = "0.1.0"
edition = "2024"


[dependencies]
# Error management
anyhow = "1"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"

# Config
# Needed until https://github.com/GREsau/schemars/pull/476 is merged
schemars = { version = "1", git = "https://github.com/artrixdotdev/schemars", features = [
   "url2",
   "regex",
] }
regex = "1"
config = "0.15"

serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# URL parsing
url = "2.5"


[build-dependencies]
schemars = { version = "1", git = "https://github.com/artrixdotdev/schemars", features = [
   "url2",
   "regex",
] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
