[package]
name = "browsermux"
description = "Route URLs to a specific browser!"
repository = "https://github.com/artrixdotdev/browsermux"
homepage = "https://github.com/artrixdotdev/browsermux"
authors = ["Artrix <sefu786@outlook.com>"]
license = "MIT"
version = "0.1.0"
edition = "2024"

[package.metadata.wix]
upgrade-guid = "49FDC885-9A9C-4A66-B4B3-EEB96AAA9499"
path-guid = "D7D3E6E3-A772-4494-96A0-6BF97484C877"
license = false
eula = false

[package.metadata.aur]
package_name = "browsermux"
source_download = "https://github.com/artrixdotdev/browsermux/releases/download/v{{ version }}/browsermux-{{ version }}-x86_64.tar.gx"
depends = ["sushi"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


[dependencies]
# Error management
anyhow = "1"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"

# Config
# Needed until https://github.com/GREsau/schemars/pull/476 is merged
schemars = { version = "1", git = "https://github.com/artrixdotdev/schemars", features = [
   "url2",
   "regex",
] }
regex = "1"
config = "0.15"

serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# URL parsing
url = "2.5"


[build-dependencies]
schemars = { version = "1", git = "https://github.com/artrixdotdev/schemars", features = [
   "url2",
   "regex",
] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
